<resources>
    <string name="app_name">FairyStory</string>
    <string name="update_count">选择数量</string>
    <string name="path_command">路径指令：</string>
    <string name="prop_command">道具指令：</string>
    <string name="put_center">
        请将小贝放在图中所示起点位置。\n
        如果您操作正确，但仍出现上述提示，请尝试退出应用，在小贝表情界面下触摸小贝头部几次，再重新进入应用使用。
    </string>
    <string name="station_command">创想模块：</string>
    <string name="function_command">函数指令：</string>
    <string name="my_history">我的创作</string>
    <string name="long_click_delete">长按创作删除</string>
    <string name="perform">表演</string>
    <string name="tell">讲故事</string>
    <string name="save">保存</string>
    <string name="history_work_empty">暂无创作作品保存记录</string>
    <string name="save_success">保存成功，到我的创作中观看</string>
    <string name="delete_card">确定要删除该指令卡吗?</string>
    <string name="delete_work">确定要删除该创作作品吗?</string>
    <string name="show_again">故事讲完啦，再讲一次吗?</string>
    <string name="show_finish">结束观看</string>
    <string name="tell_again">再讲一次</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="show_right_now">立即观看</string>
    <string name="choose_card">选择卡片或者刷卡</string>
    <string name="clear_all_station_config">确定要删除小站所有配置吗?</string>
    <string name="programme_command">语法指令</string>
    <string name="action_command">行动指令</string>
    <string name="update_tips">选择修改的指令</string>
    <string name="choose_prop">选择道具卡</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="three_second">3秒</string>
    <string name="four_second">4秒</string>
    <string name="five_second">5秒</string>
    <string name="six_second">6秒</string>
    <string name="seven_second">7秒</string>
    <string name="eight_second">8秒</string>
    <string name="nine_second">9秒</string>
    <string name="ten_second">10秒</string>
    <string name="fifteen_second">15秒</string>
    <string name="twenty_second">20秒</string>
    <string name="some_second">%d秒</string>
    <string name="empty_action_tips">小朋友，你还没有输入指令卡片</string>
    <string name="error_parallel_tips">并行卡只能和前进卡一起使用</string>
    <string name="error_prop_tips">道具卡只能配合并行卡使用哦</string>
    <string name="confirm_delete_all_record">确定要删除所有的记录吗?</string>
    <string name="sound_lib_name">音频库</string>
    <string name="image_lib_name">图库</string>
    <string name="duration_time">3秒</string>
    <string name="clear_config">清理配置</string>
    <string name="sure_casting">确定投屏</string>
    <string name="error_target_end_load">没有到达目标终点\n目标终点是</string>
    <string name="mission_error_no_load">前方没路了\n任务失败</string>
    <string name="mission_error_prop_fail">道具使用错误\n任务失败</string>
    <string name="mission_error_load_stop">道路不通\n任务失败</string>
    <string name="mission_error_prop_none">没有可使用的道具\n任务失败</string>
    <string name="shake_hand_left_right">摆双臂</string>
    <string name="shake_hand_left">举左手</string>
    <string name="shake_hand_right">举右手</string>
    <string name="turn_head">转头</string>
    <string name="turn_head_left">左转头</string>
    <string name="turn_head_right">右转头</string>
    <string name="choose_time">选择时间</string>
    <string name="casting">投屏</string>
    <string name="recording">记录</string>
    <string name="no_tell_story">没有可以讲述的故事</string>
    <string name="opening_bluetooth">正在打开蓝牙</string>
    <string name="closing_bluetooth">正在关闭蓝牙</string>
    <string name="take_success">拍照成功</string>
    <string name="delete_success">删除成功</string>
    <string name="no_history_work">暂无查询到可用的历史记录</string>
    <string name="delete_work_success">成功删除作品 ： </string>
    <string name="delete_work_fail">删除作品失败</string>
    <string name="save_walk_action_error">动作指令保存失败</string>
    <string name="save_walk_config_error">创想模块配置信息保存失败</string>
    <string name="save_walk_order_error">创想模块行走顺序信息保存失败</string>
    <string name="voice">声音</string>
    <string name="image">图片</string>
    <string name="action">动作</string>
    <string name="bluetooth">蓝牙</string>
    <string name="make_cast">确定投屏</string>
    <string name="bluetooth_casting">蓝牙(正在投屏中)</string>
    <string name="bluetooth_closing">正在关闭蓝牙</string>
    <string name="bluetooth_opening">正在打开蓝牙</string>
    <string name="save_success_again">作品已保存</string>
    <string name="serial_num">创作号 ： %d</string>
    <string name="blocks">编程积木</string>
    <string name="last_command">导入指令</string>
    <string name="execute">执行</string>
    <string name="blocks_help">积木帮助</string>
    <string name="blocks_tips">注：蓝牙配对、发送指令过程中，请不要关闭此界面</string>
    <string name="blocks_unsupported">本机不支持编程积木的使用</string>
    <string name="blocks_closed">连接功能关闭</string>
    <string name="blocks_wait_command">等待指令接收</string>
    <string name="blocks_starting">正在启动中,请稍后</string>
    <string name="blocks_start_fail">启动失败</string>
    <string name="blocks_command_received">指令接收完成</string>
    <string name="blocks_link_fail">与积木连接出错</string>
    <string name="blocks_link_status_change">与积木连接状态正在变化中</string>
    <string name="blocks_link_disconnected">与积木连接断开</string>
    <string name="blocks_link_connected">与积木连接成功,等待指令接收</string>
    <string name="blocks_command_empty">指令为空,不可执行</string>
    <string name="function_update">选择函数</string>
    <string name="undefine_function">函数还没有定义,请先进行函数定义</string>
    <string name="define_function">函数定义</string>
    <string name="define_function_num">函数%d定义</string>
    <string name="clean">清空</string>

</resources>
